--- a/_config.yml
+++ b/_config.yml
@@ -192,6 +192,18 @@ defaults:
     values:
       layout: page
       permalink: /:title/
+  - scope:
+      path: assets/img/favicons
+    values:
+      swcache: true
+  - scope:
+      path: assets/js/dist
+    values:
+      swcache: true
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
 
 sass:
   style: compressed
