--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: https://github.com/BartOevering/bartoevering.github.io # <gh-username>/<repo>
+    repo: BartOevering/bartoevering.github.io # <gh-username>/<repo>
     repo_id: R_kgDONQpC5A
     category: General
     category_id: DIC_kwDONQpC5M4Ck8VC
